tests/ui/compile-fail/pin_data/missing_pin.stderr
error[E0277]: the trait bound `impl PinInit<usize>: Init<usize, _>` is not satisfied
  --> tests/ui/compile-fail/pin_data/missing_pin.rs:11:9
   |
11 | /         pin_init!(Self {
12 | |             a <- a,
   | |             - required by a bound introduced by this call
13 | |         })
   | |__________^ the trait `Init<usize, _>` is not implemented for `impl PinInit<usize>`
   |
   = help: the trait `Init<usize, _>` is not implemented for `impl PinInit<usize>`
           but trait `Init<impl PinInit<usize>, _>` is implemented for it
   = help: for that trait implementation, expected `impl PinInit<usize>`, found `usize`
note: required by a bound in `__ThePinData::a`
  --> tests/ui/compile-fail/pin_data/missing_pin.rs:4:1
   |
4  | #[pin_data]
   | ^^^^^^^^^^^ required by this bound in `__ThePinData::a`
5  | struct Foo {
6  |     a: usize,
   |     - required by a bound in this associated function
   = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
